<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">کمک دست</string>
    <string name="default_package_name">Package</string>
    <string name="coin_box">Coins</string>
    <string name="background">Background</string>
    <string name="logo">Aftabe</string>
    <string name="levels_package">Package</string>
    <string name="play">Play</string>
    <string name="nothing" />
    <integer name="click_id_four"/>
    <string name="not_enought_coins">سکه‌ی کافی برای خریدش نداریم</string>
    <string name="toast_crash">آفتابه با مشکل عجیبی رو به رو شده... در صورتی که به اینترنت متصل شوید این مشکل به ماگزارش می‌شه و به زودی برطرف می‌شه. صمیمانه ازتون عذر می‌خوایم. :(</string>
    <string name="empty_list">بسته‌ای وجود ندارد</string>
    <string name="updated_time_shared_preference">updatedTime</string>
    <string name="domain_url_head_json">http://rsdn.ir/files/aftabe/head.json</string>
    <string name="gcm_permission">ir.treeco.aftabeplus.GCM.PERMISSION</string>
    <string name="gcm_default_SenderId">294812968005</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="server_client_id">294812968005-ele3vc1ujm5ho3u1m24516q6cq05o23u.apps.googleusercontent.com</string>
    <string name="connection_to_internet_sure">لطفا از اتصال به اینترنت مطمئن شوید</string>
    <string name="try_later">لطفا بعدن تلاش کنید</string>
    <string name="chat_not_available">به زودی !</string>
    <string name="enemy_internet_fucked">اتصال به اینترنت حریف دچار مشکل شد</string>
        <string name="intro_main">
            <b>هدف این نرم افزار ارايه ابزار کمک اموزشی زبان اشاره فارسی میباشد.
            </b>
            در این نرم افزار ۳ نوع مرحله تبعیه شده اشت.

        </string>
        <string name="alefba_desc"><b>بسته اموزشی الفبا</b>
            \n
            در این بسته فیلمی از یک حرف و حرف مربوط الفبای آن نمایش داده میشود.
            مناسب برای یاد گیری الفبا.


            </string>

        <string name="puzzle_desc"><b>بسته اموزشی کودکان زیر ۸ سال</b>
            \n
            در این بسته فیلمی از یک کلمه و ۴ عکس نمایش داده می شود.
            با کلید بر روی عکس نا مربوط، آن عکس قرمز می شود.
            با کلید بر روی عکس درست، مرحله رد می شود.


            </string>

        <string name="keyboard_desc"><b>بسته اموزشی با استفاده از زبان فارسی</b>
            \n
            در این بسته فیلمی از مفهموی نمایش داده میشود و با استفاده از الفبای فارسی میتوانید به حدس کلمه بپردازید.
            این بسته برای کودکانی که الفبای فارسی را آموخته اند تعبیه شده است.


            </string>


</resources>
