<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/nothing" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/coin_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/coin_box" />

            <TextView
                android:id="@+id/digits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:shadowColor="#000"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="1"
                android:singleLine="true"
                android:textColor="#ffffff"
            />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo" />

            <Button
                android:id="@+id/activity_main_credits_button"
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/cheat_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/nothing"
                android:visibility="invisible" />

            <FrameLayout
                android:id="@+id/timer_online"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/star_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:visibility="gone"
                />

            <ir.treeco.aftabe2.View.Custom.UserLevelView
                android:id="@+id/player1_online_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:customDimension="0.16"
                app:textAlign="below"
                app:isOnlineTop="true"
                />


            <ir.treeco.aftabe2.View.Custom.UserLevelView
                android:id="@+id/player2_online_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:customDimension="0.16"
                app:isOnlineTop="true"

                app:textAlign="below"

                />

        </RelativeLayout>

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"></FrameLayout>

    </LinearLayout>


</FrameLayout>